# quantkit

./: .airflowignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile-jupyter  Dockerfile_dev  README.md  certs.crt  clean_docker.ps1  dev_cleanup.ps1  docker-compose.yml  jupyter_requirements.txt  pyproject.toml  requirements.txt  risk_framwork.py  run_tests.ps1  runner.py  runner_PAI.py  setup.py  test_requirements.txt
asset_allocation/: runner.py
backtester/: runner_backtester.py
bt/: __init__.py  runner.py
code/: job2.yml  q_alpha.py  recurrence-job-schedule.yml
configs/: asset_allocation.json  backtester.json  configSA.json  configs.json  pai.json  risk_framework.json
data_sources/: blank.py  data_sources.py  excel.py  fred.py  json_ds.py  msci.py  quandl.py  snowflake.py  sql_server.py
documentations/: ASSETALLOCATION.md  PAI.md  RISKFRAMEWORK.md
handyman/: bloomberg_data_loader.py  fred_data_loader.py  msci_data_loader.py  optimizer.py  pai.py  pcaf_data_loader.py  portfolios.py  quandl_data_loader.py  risk_framework.py  sp_data_loader.py
loader/: runner.py
notebooks/: PAI.ipynb  asset_allocation.ipynb  bt_Strategy_Combination.ipynb  bt_buy_and_hold.ipynb  bt_fixed_income.ipynb  bt_trend_1.ipynb  economic_data.ipynb  mean_reversion.ipynb  pcaf.ipynb  q_alpha.ipynb  risk_framework.ipynb
pai/: runner_PAI.py
risk_framework/: runner_risk_framework.py
runners/: runner.py  runner_PAI.py  runner_asset_allocation.py  runner_risk_framework.py
tests/: .coveragerc  __init__.py  shared_test_utils.py  test_covariance.py  test_mathstats.py  (+2 more)
(+315 files in other folders)
