[build-system]
requires = [
    "setuptools>=61.0",
    "wheel >= 0.38",]
build-backend = "setuptools.build_meta"

[project]
name = "quantkit"
version = "1.3.1"
authors = [
  { name="Tim Bastian", email="tim.bastian@tcw.com" },
]
description = "TCW quantkit"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "black>=23.3.0",
    "matplotlib>=3.7.1",
    "Nasdaq-Data-Link>=1.0.4",
    "numpy>=1.24.3",
    "openpyxl>=3.1.2",
    "pandas>=2.0.2",
    "cvxpy>=1.3.2",
    "pyodbc>=4.0.39",
    "fredapi>=0.5.1",
    "ipykernel",
    "dash>= 2.11.1",
    "scikit-learn >= 1.3.0",
    "scipy >= 1.11.2",
]

[project.urls]
"Homepage" = "https://gitlab.com/tcw-group/quant-research/quantkit"
"Bug Tracker" = "https://gitlab.com/tcw-group/quant-research/quantkit/-/issues"

[tool.setuptools]
py-modules = []